k8s/base/infra/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: ums
spec:
  selector:
    app: jaeger
  ports:
  - name: otlp
    port: 4317
    targetPort: 4317
  - name: ui
    port: 16686
    targetPort: 16686
