k8s/base/infra/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ums
spec:
  selector:
    app: postgres
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
