k8s/base/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ums-ingress
  namespace: ums
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:

  # API Gateway — main entry point for all clients
  - host: api.ums.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

  # BFF — Backend for Frontend
  - host: bff.ums.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bff
            port:
              number: 8080

  # Seq — log dashboard
  - host: seq.ums.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seq
            port:
              number: 80

  # Jaeger — distributed tracing UI
  - host: jaeger.ums.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaeger
            port:
              number: 16686
